--- a/bootstraping/roles/kubekey/templates/cilium-values.yaml.j2
+++ b/bootstraping/roles/kubekey/templates/cilium-values.yaml.j2
@@ -1,5 +1,5 @@
 kubeProxyReplacement: true
-k8sServicePort: "6443"
+k8sServicePort: "{{ api_server_port }}"
 k8sServiceHost: "{{ kube_vip_address }}"
 hubble:
   enabled: true
