update cilium vaules

--- a/bootstraping/roles/kubekey/templates/cilium-values.yaml.j2
+++ b/bootstraping/roles/kubekey/templates/cilium-values.yaml.j2
@@ -1,4 +1,4 @@
-kubeProxyReplacement: true
+kubeProxyReplacement: "true"
 k8sServicePort: "{{ api_server_port }}"
 k8sServiceHost: "{{ kube_vip_address }}"
 k8sClientRateLimit:
