disable nodePort and hostPort

--- a/bootstraping/roles/kubekey/templates/cilium-values.yaml.j2
+++ b/bootstraping/roles/kubekey/templates/cilium-values.yaml.j2
@@ -33,6 +33,6 @@ ipv4NativeRoutingCIDR: "10.233.64.0/18"
 # routingMode: "native"
 # autoDirectNodeRoutes: true
 hostPort:
-  enabled: "true"
+  enabled: "false"
 nodePort:
-  enabled: "true"
+  enabled: "false"
